@@ -2,6 +2,8 @@ pve-container (1.0-21) unstable; urgency=medium
 
   * allow debian stretch/sid containers
 
+  * destroy: check if container is still running
+
  -- Proxmox Support Team <support@proxmox.com>  Wed, 04 Nov 2015 11:23:00 +0100
 
 pve-container (1.0-20) unstable; urgency=medium
